<resources>
    <string name="app_name">Virtual Emergency Assistant</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not registered yet? Sign Up</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in2">Sign In</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="gender">Gender</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Password</string>
    <string name="date_of_birth1">Date of Birth</string>
    <string name="mobile_number1">Mobile Number</string>
    <string name="gender1">Gender</string>
    <string name="user_type">User Type</string>
    <string name="username">Username</string>
    <string name="email1">Email</string>
    <string name="title_activity_maps">Map</string>
</resources>