<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/signInUNameEditTextID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="@font/contrail_one"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="@color/paste"
        android:textColorHint="@color/teal_700" />
    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signInPasswordEditTextID"
        android:inputType="textPassword"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:hint="@string/password"
        android:fontFamily="@font/contrail_one"
        android:textColor="@color/paste"
        android:autofillHints=""
        android:textColorHint="@color/teal_700"/>

    <Button
        android:id="@+id/SignInButtonId"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/paste"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:fontFamily="@font/contrail_one"
        android:layout_marginLeft="70dp"
        android:onClick="userLogin"/>

    <TextView

        android:id="@+id/SignUpTextViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/not_registered_yet_sign_up"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/paste"
        android:fontFamily="@font/contrail_one"
        android:clickable="true"
        android:onClick="openSignInActivity"/>

    <ProgressBar

        android:visibility="gone"
        android:layout_gravity="center"
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />




</LinearLayout>